# life-game

./: .gitignore  README.md  neighbours-index-algorithm.md
rust/: Cargo.toml
rust/src/: main.rs
