[package]
name = "life-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1"
once_cell="1.17"
crossterm="0.25"
anyhow="1.0"
rand="0.8"
chrono="0.4"
